--- a/views/shared/includes/header.ejs
+++ b/views/shared/includes/header.ejs
@@ -4,14 +4,18 @@
         <ul>
             <li class="nav-item"><a href="">Shop</a></li>
             <li class="nav-item"><a href="">Cart</a></li>
+            <% if (!locals.isAuth) { %>
             <li class="nav-item"><a href="/signup">Signup</a></li>
             <li class="nav-item"><a href="/login">Login</a></li>            
-            <li class="nav-item">
-                <form action="/logout" method="POST">
-                    <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" >
-                    <button>Logout</button>
-                </form>
-            </li>            
+            <% } %> 
+            <% if (locals.isAuth) { %>
+                <li class="nav-item">
+                    <form action="/logout" method="POST">
+                        <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" >
+                        <button>Logout</button>
+                    </form>
+                </li>
+            <% } %>                         
         </ul>
     </nav>
 </header>
