--- a/views/customer/auth/login.ejs
+++ b/views/customer/auth/login.ejs
@@ -6,19 +6,21 @@
     <%- include("../../shared/includes/header") %>
     <main>
         <h1>Login</h1>
-        <div class="error-message">
-            <h3>Prueba</h3>
-            <p>Prueba de error</p>
-        </div>
+        <% if (sessionInputData.hasError) { %> 
+            <div class="error-message">
+                <h3><%= sessionInputData.title %></h3>
+                <p><%= sessionInputData.message %></p>
+            </div>
+        <% } %>         
         <form class="auth-forms" action="/login" method="POST">     
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">       
             <div>
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" value="<%= sessionInputData.email %>" required>
             </div>
             <div>
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" minlength="6" required>
+                <input type="password" id="password" name="password" minlength="6" value="<%= sessionInputData.password %>" required>
             </div>      
             <div class="form-btns">
                 <button class="btn">Login</button>
