--- a/views/customer/auth/signup.ejs
+++ b/views/customer/auth/signup.ejs
@@ -6,40 +6,42 @@
     <%- include("../../shared/includes/header") %>
     <main>
         <h1>Create a new account</h1>
-        <div class="error-message">
-            <h3>Prueba</h3>
-            <p>Prueba de error</p>
-        </div>
+        <% if (sessionInputData.hasError) { %> 
+            <div class="error-message">
+                <h3><%= sessionInputData.title %></h3>
+                <p><%= sessionInputData.message %></p>
+            </div>
+        <% } %>  
         <form class="auth-forms" action="/signup" method="POST">
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>">
             <div>
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email" value="<%= sessionInputData.email %>" required>
             </div>
             <div>
                 <label for="confirm-email">Confirm email</label>
-                <input type="email" id="confirm-email" name="confirm-email" required>
+                <input type="email" id="confirm-email" name="confirm-email" value="<%= sessionInputData.confirmEmail %>" required>
             </div>
             <div>
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" minlength="6" required>
+                <input type="password" id="password" name="password" minlength="6" value="<%= sessionInputData.password %>" required>
             </div>
             <hr>
             <div>
                 <label for="fullname">Full Name</label>
-                <input type="text" id="fullname" name="fullname" required>
+                <input type="text" id="fullname" name="fullname" value="<%= sessionInputData.fullname %>" required>
             </div>
             <div>
                 <label for="street">Street</label>
-                <input type="text" id="street" name="street" required>
+                <input type="text" id="street" name="street" value="<%= sessionInputData.street %>" required>
             </div>    
             <div>
                 <label for="postal">Postal Code</label>
-                <input type="text" id="postal" name="postal" minlength="5" maxlength="5" required>
+                <input type="text" id="postal" name="postal" minlength="5" maxlength="5" value="<%= sessionInputData.postal %>" required>
             </div>
             <div>
                 <label for="city">City</label>
-                <input type="text" id="city" name="city" required>
+                <input type="text" id="city" name="city" value="<%= sessionInputData.city %>" required>
             </div>        
             <div class="form-btns">
                 <button class="btn">Create Account</button>
