--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -62,83 +62,8 @@ h1 {
 }
 
 main {
-    text-align: center;
-    margin: var(--space-8) 0;
-    width: 90%;
-    max-width: 50rem;
-    margin: 0 auto;
-}
-
-/* Header */
-
-.main-header {
-    width: 80%;
-    margin: 0 auto var(--space-4) auto;
-    padding: var(--space-2) var(--space-8);
-    border-bottom: 1px solid var(--color-primary);   
-    display: flex; 
-    justify-content: space-between;
-    align-items: center;    
-}
-
-.main-header form {
-    width: auto;
-    display: inline;
-}
-
-.main-header button {
-    background-color: transparent;
-    border: none;
-    font: inherit;
-    cursor: pointer;
-    display: inline;
-}
-
-.main-header a,
-.main-header button {
-    color: var(--color-secondary);
-}
-
-#logo {
-    color: var(--color-secondary);
-    font-size: var(--font-big);
-}
-
-#logo:hover {
-    color: var(--color-primary);
-}
-
-.nav-item {
-    display: inline;
-    margin-left: var(--space-8);
-}
-
-.nav-item a,
-.main-header button {
-    border-radius: var(--border-radius-medium);
-    position: relative;
-}
-
-.nav-item a::after,
-.main-header button::after {
-    content: " ";
-    position: absolute;
-    background-color: var(--color-primary);
-    height: 3px;
-    width: 0;
-    left: 0;
-    bottom: -10px;
-    transition: 0.3s;
-}
-
-.nav-item a:hover,
-.main-header button:hover {
-    color: var(--color-primary);
-}
-
-.nav-item a:hover::after,
-.main-header button:hover::after {
-    width: 100%;
+    text-align: center;        
+    margin: 6rem 0;
 }
 
 .btn {
