--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -11,3 +11,5 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
     <!-- CSS Links -->
     <link rel="stylesheet" href="/styles/base.css">
+    <link rel="stylesheet" href="/styles/navigation.css">
+    <script src="/scripts/mobile-nav.js" defer></script>
