--- a/views/admin/products/all-products.ejs
+++ b/views/admin/products/all-products.ejs
@@ -1,4 +1,5 @@
 <%- include("../../shared/includes/head", { title: "All products" }) %>
+<link rel="stylesheet" href="/styles/products.css">
 </head>
 <body>
     <%- include("../../shared/includes/header") %>
@@ -12,7 +13,7 @@
             <% if (products.length === 0) { %> 
                 <p>You don't have any products - Maybe add some?</p>
             <% } else { %> 
-                <ul>
+                <ul id="products-grid">
                     <% for (const product of products) { %> 
                         <li>
                             <%- include("includes/product-item", { product: product }) %> 
