--- a/views/admin/products/new-product.ejs
+++ b/views/admin/products/new-product.ejs
@@ -5,36 +5,11 @@
     <%- include("../../shared/includes/header") %>    
     <main>
         <h1>Add new product</h1>        
-        <form class="product-form" action="/admin/products?_csrf=<%= locals.csrfToken %>" method="POST" enctype="multipart/form-data">            
-            <div>
-                <label for="title">Title</label>
-                <input type="text" name="title" id="title" required>
-            </div>
-
-            <div>
-                <label for="image">Image</label>
-                <input type="file" name="image" id="image" accept="image/png,image/jpg" required>
-            </div>
-
-            <div>
-                <label for="summary">Summary</label>
-                <input type="text" name="summary" id="summary" maxlength="250" required>
-            </div>
-
-            <div>
-                <label for="price">Price</label>
-                <input type="number" name="price" id="price" min="0.01" step="0.01" required>
-            </div>
-
-            <div>
-                <label for="description">Description</label>
-                <textarea name="description" id="description" rows="7" required></textarea>
-            </div>
-
-            <div>
-                <button type="reset" class="btn btn-alt">Reset</button>
-                <button class="btn">Save</button>
-            </div>
-        </form>
+        <%- include("./includes/product-form", { submitPath: "/admin/products", product: {
+            title: "",
+            summary: "",
+            price: "",
+            description: "",
+        }, imageRequired: true }) %>
     </main>
 <%- include("../../shared/includes/footer") %>
