--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -1,35 +1,81 @@
 #products-grid {
-    margin: var(--space-8) auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-    gap: var(--space-4);
+	margin: var(--space-8) auto;
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+	gap: var(--space-4);
 }
 
-.product-item {    
-    border-radius: var(--border-radius-medium);
-    text-align: center;    
-    box-shadow: var(--shadow-medium);
-    overflow: hidden;
+.product-item {
+	border-radius: var(--border-radius-medium);
+	text-align: center;
+	box-shadow: var(--shadow-medium);
+	overflow: hidden;
 }
 
 .product-item img {
-    width: 100%;
-    height: 20rem;
-    object-fit: cover;    
+	width: 100%;
+	height: 20rem;
+	object-fit: cover;
 }
 
 .product-item-content {
-    padding: var(--space-4);
+	padding: var(--space-4);
 }
 
 .product-item-content h2 {
-    font-size: 1.25rem;
-    margin: var(--space-2) 0;
+	font-size: 1.25rem;
+	margin: var(--space-2) 0;
 }
 
 .product-item-actions {
-    display: flex;
-    justify-content: center;
-    gap: var(--space-2);
-    margin-top: var(--space-4);
+	display: flex;
+	justify-content: center;
+	gap: var(--space-2);
+	margin-top: var(--space-4);
+}
+
+#product-details header {
+	margin-top: var(--space-8);
+	padding: var(--space-8);	
+	gap: var(--space-8);
+}
+
+#product-details img {
+	width: 100%;
+	height: 6rem;
+	object-fit: cover;
+	border-radius: var(--border-radius-medium);
+}
+
+#product-info {
+	text-align: center;
+}
+
+.description-part {
+    padding: var(--space-8);    
+}
+
+#product-description {	
+	white-space: pre-wrap;
+}
+
+@media (min-width: 48rem) {
+	#product-details header {
+		display: flex;
+	}
+
+	#product-details img {
+		width: 20rem;
+		height: 20rem;
+		transform: rotateZ(-10deg);
+		margin: var(--space-8);
+	}
+
+	#product-info {
+		text-align: left;
+	}
+
+    .description-part {        
+        text-align: left;
+    }
 }
