--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -1,9 +1,20 @@
 <%- include("../../shared/includes/head", { title: "All products" }) %>
+<link rel="stylesheet" href="/styles/products.css">
 </head>
 <body>
     <%- include("../../shared/includes/header") %>
     <main>
-        <h1>All products</h1>        
-        <p>A list of our products...</p>
+        <h1>All products</h1>                
+        <% if (!products || products.length === 0) { %> 
+            <p>There are no products available at the moment ;( - Maybe another day!</p>
+        <% } else { %>
+            <ul id="products-grid">
+                <% for (const product of products) { %>
+                    <li>
+                        <%- include("../../shared/includes/product-item", { product: product }) %> 
+                    </li>
+                <% } %>
+            </ul>
+        <% } %>
     </main>
 <%- include("../../shared/includes/footer") %>
