--- a/views/shared/includes/nav-items.ejs
+++ b/views/shared/includes/nav-items.ejs
@@ -1,7 +1,7 @@
 <ul>
     <% if (!locals.isAdmin) { %>
         <li class="nav-item"><a href="/">Shop</a></li>
-        <li class="nav-item"><a href="/cart">Cart</a></li>
+        <li class="nav-item"><a href="/cart">Cart <span class="badge"><%= locals.cart.totalQuantity %></span></a></li>
     <% } %>             
 
     <% if (locals.isAuth && !locals.isAuth) { %>
