Added order functionality to add new order if user is logged in and store it in the database

--- a/public/styles/cart.css
+++ b/public/styles/cart.css
@@ -47,6 +47,12 @@
     color: var(--color-secondary);
 }
 
+#cart-total #cart-total-fallback p {
+    font-size: 1.125rem;
+    font-weight: normal;
+    color: var(--color-primary);
+}
+
 @media (min-width: 48rem) {
     .cart-item {
         flex-direction: row;
