--- a/views/admin/orders/admin-orders.ejs
+++ b/views/admin/orders/admin-orders.ejs
@@ -1,5 +1,6 @@
 <%- include("../../shared/includes/head", { title: "All your orders" }) %>
 <link rel="stylesheet" href="/styles/orders.css">
+<script src="/scripts/order-management.js" defer></script>
 </head>
 <body>
     <%- include("../../shared/includes/header") %>
