--- a/views/shared/includes/head.ejs
+++ b/views/shared/includes/head.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="description" content="Browse our amazing tech products, we're sure you'll find what you are looking for!" />
     <title><%= title %> </title>
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
