--- a/views/customer/products/all-products.ejs
+++ b/views/customer/products/all-products.ejs
@@ -6,7 +6,7 @@
     <main>
         <h1>All products</h1>                
         <% if (!products || products.length === 0) { %> 
-            <p>There are no products available at the moment ;( - Maybe another day!</p>
+            <p>There are no products available at the moment ;( - Maybe check another day!</p>
         <% } else { %>
             <ul id="products-grid">
                 <% for (const product of products) { %>
